feat: 支持第三方服务地址配置
